# rpi_scanner

./: rpc_gen_project_settings.txt
client/: box_scan.pcd  test2.pcd
client/rpc_include/: ScannerServiceClientStub.h
client/rpc_source/: ScannerServiceClientStub.cpp
common/include/: scanner_point.h
common/rpc_include/: ScannerRpc.pb.h
common/rpc_source/: ScannerRpc.pb.cc
proto/: ScannerRpc.proto
rpc_stage/: .gitignore
rpi_viewer/config/system/: system.txt
rpi_viewer/config/targets/RPI_SCANNER/cmd_tlm/: cmd.txt  tlm.txt
rpi_viewer/config/tools/cmd_tlm_server/: cmd_tlm_server.txt
rpi_viewer/config/tools/launcher/: launcher.txt
rpi_viewer/config/tools/pcd_viewer/: pcd_viewer.txt
rpi_viewer/lib/tools/cosmos_tool_box/: cosmos_tool_box.rb
rpi_viewer/lib/tools/pcd_viewer/: output.txt  pcd_file.rb  pcd_file_test.rb  pcd_viewer.rb  pcd_viewer_config.rb  rpi_scanner_sim.rb
rpi_viewer/tools/: CosmosToolBox  ExampleTarget.bat  PcdViewer
rpi_viewer/tools/mac/CmdTlmServer.app/Contents/MacOS/: CmdTlmServer
rpi_viewer/tools/mac/CosmosToolBox.app/Contents/MacOS/: PcdViewer  PcdViewer.rb  main.sh
rpi_viewer/tools/mac/PcdViewer.app/Contents/MacOS/: PcdViewer.rb  main.sh
server/: .gitignore  CMakeLists.txt  ads1115_interface.cpp  ads1115_interface.h  asio_serial_port.h  i2c_interface.cpp  i2c_interface.h  lidar_lite.cpp  lidar_lite.h  pan_tilt_commander.h  pan_tilt_controller.cpp  pan_tilt_controller.h  pan_tilt_thread.cpp  pan_tilt_thread.h  pan_tilt_util.cpp  pwm_controller.cpp  pwm_controller.h  rpi_scanner  scanner_flat_defs.h  scanner_point_callback.h  scanner_service.cpp  serial_scanner_service.cpp  sharp_range_sensor.cpp  sharp_range_sensor.h
server/rpc_include/: ScannerServiceServerStub.h  ScannerServiceSetModeAction.h
server/rpc_source/: ScannerServiceServerStub.cpp  ScannerServiceSetModeAction.cpp
